test/runtime-integration-tests/TestPrograms/Syntax/Invalid/import_missing_semi.5th
use Math
main(): int { return 0; }
